??.??.2004 version 1.2-beta
###########################
- fixed: compiling with --disable-xmms
- re-added: toolbar button for "Switch to/from playlist"
- fixed: only selecting first 201 songs in folder popup menu
- added: dcop interface (thanks to Daniel Raneland)
- started to port yammi handbook from sgml to docbook format (including requirements for installation / compilation)
- fixed: saving setting for filenamePattern (like "*.mp3 *.ogg")


02.07.2004 version 1.2-alpha-3
##############################
Fixed some major bugs:
- fixed: importing old database
  (if you already used another 1.2-alpha version of yammi and have an empty song database now:
   if you delete the directory ~/.kde/share/apps/yammi, then yammi will automatically import your old
   database from ~/.yammi)
- fixed: updating id3 tags did not work if no tags were present in the file
- fixed: loading database from a given dir (using a command line parameter, try "yammi -h")
- fixed: connecting to xmms
- fixed: yammiui.rc not installed => aborting with correct error message
  (you have to have the yammiui.rc file correctly installed at (eg.) /opt/kde3/share/apps/yammi/yammiui.rc,
  please set KDEDIR to (eg.) /opt/kde3 before calling configure: "export KDEDIR=/opt/kde3")
- fixed: qt versions of .ui files (now QT >= 3.2 should be sufficient for compiling)
- fixed: fixed-size (g)char arrays: now using QString classes whenever possible


07.06.2004 version 1.2-alpha-2
##############################
- fixed: a bug that caused a crash when yammi was started without any existing song database

06.06.2004 version 1.2-alpha
############################
MAJOR CHANGES:
- new: yammi is a proper KDE application now!
  => new translation scheme (i18n kde default scheme)
  => requires kde libs
  => --disable-KDE and --disable-noatun switches removed from configure script, both are enabled by default now
  => making use of KDE's xml GUI framework