@@ -1,6 +1,6 @@
 TODO
 ----
-last update 19.07.2004
+last update 21.07.2004
 
 
 for version 1.2-beta
@@ -9,13 +9,13 @@ in progress:
 - update and publish yammi handbook (switch from sgml to docbook format)
 
 planned:
-- save playlist (+ song position) on shutdown
+- FIX: check consistency for whole song database: only one song selected
+- save + restore playlist (+ song position) on shutdown/startup
 - BUG: cannot sort files according to path => cannot reproduce this bug on my system
 - FIX: progress dialog on scanning harddisk disappears
-- re-add: enqueue(asnext) (random) and "shuffle playlist"
-- search for similar: put the search text into the search field
+- improve "Play now" icon
 - CHECK: umlaute in tags?
-- FIX: file pattern to import
+- CHECK: enqueuing songs => player starts to play immediately
 - improve: wishlist items
 - define and execute smoke tests (write little script with all configure options)
 - check all TODOs / FIXMEs
@@ -43,9 +43,6 @@ check kde conformance:
   and play a song in yammi, the song previously played in xmms is played instead.
 - on deleting a song: delete in *all* lists (history, categories, ...)
 - plugin: publish a sample plugin (echo...) with all replacements
-- replace QListView with KListView
-  - but beware of performance issues, see http://bugs.kde.org/show_bug.cgi?id=64608
-  - and other QClasses too?
 - consistency check:
   - better dialog texts (which song is moved?, better explanations what happens/examples?)
 - comment in replacements?
@@ -66,6 +63,10 @@ for version 1.2
 
 for version 1.4
 ---------------
+- re-add: enqueue/enqueueasnext random
+- replace QListView with KListView
+  - but beware of performance issues, see http://bugs.kde.org/show_bug.cgi?id=64608
+  - and other QClasses too?
 - amarok support?
 - use Scott Wheelers taglib for reading metadata
 - use a player thread for mediaplayer
