@@ -1,83 +1,68 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <!DOCTYPE KDevPrjSession>
 <KDevPrjSession>
- <DocsAndViews NumberOfDocuments="14" >
-  <Doc0 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/ChangeLog" >
-   <View0 line="7" Type="???" >
+ <DocsAndViews NumberOfDocuments="11" >
+  <Doc0 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/doc/en/index.docbook" >
+   <View0 line="202" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/TODO" >
-   <View0 line="26" Type="???" >
+  <Doc1 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/doc/en/index.sgml" >
+   <View0 line="187" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/MyYammiHowto.txt" >
-   <View0 line="34" Type="???" >
+  <Doc2 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/Makefile.am" >
+   <View0 line="22" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc2>
-  <Doc3 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/preferencesdialog.cpp" >
-   <View0 line="364" Type="???" >
-    <AdditionalSettings Top="1" Width="1204" Attach="1" Height="795" Left="1" MinMaxMode="0" />
+  <Doc3 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammigui.h" >
+   <View0 line="165" Type="???" >
+    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc3>
-  <Doc4 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/main.cpp" >
-   <View0 line="63" Type="???" >
+  <Doc4 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammidcopiface.h" >
+   <View0 line="40" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc4>
-  <Doc5 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/xmmsplayer.cpp" >
-   <View0 line="324" Type="???" >
+  <Doc5 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammigui.cpp" >
+   <View0 line="2855" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc5>
-  <Doc6 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammigui.h" >
-   <View0 line="62" Type="???" >
+  <Doc6 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/ChangeLog" >
+   <View0 line="8" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc6>
-  <Doc7 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammigui.cpp" >
-   <View0 line="3498" Type="???" >
+  <Doc7 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/main.cpp" >
+   <View0 line="78" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc7>
-  <Doc8 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/xmmsplayer.h" >
-   <View0 line="36" Type="???" >
+  <Doc8 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/TODO" >
+   <View0 line="2" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc8>
-  <Doc9 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/xmmsctrl.h" >
-   <View0 line="30" Type="???" >
-    <AdditionalSettings Top="1" Width="1204" Attach="1" Height="795" Left="1" MinMaxMode="0" />
+  <Doc9 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/updatedatabasedialog.cpp" >
+   <View0 line="34" Type="???" >
+    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc9>
-  <Doc10 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammiui.rc" >
-   <View0 line="56" Type="???" >
+  <Doc10 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/prefs.cpp" >
+   <View0 line="93" Type="???" >
     <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
    </View0>
   </Doc10>
-  <Doc11 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/debug/src/icons/Makefile" >
-   <View0 line="0" Type="???" >
-    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
-   </View0>
-  </Doc11>
-  <Doc12 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/icons/Makefile.am" >
-   <View0 line="10" Type="???" >
-    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
-   </View0>
-  </Doc12>
-  <Doc13 NumberOfViews="1" URL="file:/home/brian/work/programming/kyammi/src/yammidcopiface.h" >
-   <View0 line="20" Type="???" >
-    <AdditionalSettings Top="1" Width="1203" Attach="1" Height="795" Left="1" MinMaxMode="0" />
-   </View0>
-  </Doc13>
  </DocsAndViews>
  <pluginList>
   <kdevbookmarks>
    <bookmarks>
     <bookmark url="/home/brian/work/programming/kyammi/src/yammigui.cpp" >
-     <mark line="256" />
+     <mark line="259" />
     </bookmark>
    </bookmarks>
   </kdevbookmarks>
